[package]
name = "steam_remote_play_bug_repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.44.0", features = [
    "Gaming_Input",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_System",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Collections"
] }
lazy_static = "1.4.0"